syntax = "proto3";

package roomApi;

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

message VariableRequest {
    string room = 1;
    string name = 2;
}

message SaveVariableRequest {
    string room = 1;
    string name = 2;
    google.protobuf.Value value = 3;
}

service RoomApi {
    rpc readVariable(VariableRequest) returns (google.protobuf.Value); // Get the current value of the given variable
    rpc listenVariable(VariableRequest) returns (stream google.protobuf.Value); // Listen to value updates for a given variable
    rpc saveVariable(SaveVariableRequest) returns (google.protobuf.Empty); // Set the value of the given variable
}